--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			
-		<head>
+			<link rel="stylesheet" type="text/css" href="default.css">	
+		</head>
 		<body>
 			<h1>
 
