Added meta charset

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<link rel="stylesheet" type="text/css" href="default.css">	
+			<meta charset="utf-8">
+			<link rel="stylesheet" type="text/css" href="default.css">
 		</head>
 		<body>
 			<h1>
@@ -12,8 +13,8 @@
 
 
 			</p>
-			
-			
-			
+
+
+
 		</body>
 	</html>
