--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<head>
 			<meta charset="utf-8">
 			<link rel="stylesheet" type="text/css" href="css/default.css">
+			<!--I used palette sky-->
 		</head>
 		<body>
 			<h1 id="H1"></h1>
