--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 			<link rel="stylesheet" type="text/css" href="css/default.css">
 		</head>
 		<body>
-			<h1 id="H1"></h1>
-			<p id="P"></p>
+			<h1 class="dark" id="H1"></h1>
+			<p class="Darkish" id="P"></p>
 			<ul id="UL">
 			</ul>
     <script src="js/main.js"></script>
