changed class Darkish to darkish

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</head>
 		<body>
 			<h1 class="dark" id="H1"></h1>
-			<p class="Darkish" id="P"></p>
+			<p class="darkish" id="P"></p>
 			<ul id="UL">
 			</ul>
     <script src="js/main.js"></script>
