--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 			<h1 class="dark-sky" id="H1"></h1>
 			<p class="darkish-sky" id="P"></p>
+			<ul id="College Stats">
 
+			</ul> 
 			<ul id="UL">
 			</ul>
     <script src="js/main.js"></script>
