--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 			<h1 class="dark" id="mar10"></h1>
 			<p class="darkish" id="P"></p>
 
-<<<<<<< HEAD
 			<h1 class="dark-sky" id="H1"></h1>
 			<p class="darkish-sky" id="P"></p>
-=======
->>>>>>> 7d1cd011760ffd0cbf3f5a4288b1c8a96e38d7c7
+			<ul id="College Stats">
+
+			</ul>
 			<ul id="UL">
 			</ul>
     <script src="js/main.js"></script>
