made empty navbar to html file nothing in css to describe it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 			<link rel="stylesheet" type="text/css" href="css/default.css">
 		</head>
 		<body>
+			<div class="topnav">
+				<a href="#"></a>
+				<a href="#"></a>
+				<a href="#"></a>
+			</div>
 
 			<h1 class="dark" id="mar10"></h1>
 			<p class="darkish" id="P"></p>
