--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1 class="dark" id="mar10"></h1>
 			<p class="darkish" id="P"></p>
 
-			<h1 class="dark-sky" id="H1"></h1>
+			<h1 class="dark-sky" id="mar10"></h1>
 			<p class="darkish-sky" id="P"></p>
 			<ul id="College Stats">
 
