--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<ul id="College Stats">
 
 			</ul>
-			<ul id="UL">
+			<ul id="...list">
 			</ul>
     <script src="js/main.js"></script>
 		</body>
