--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 			<h1 class="dark-sky" id="mar10"></h1>
 			<p class="darkish-sky" id="P"></p>
-			<ul id="College Stats">
+			<ul id="college-stats">
 
 			</ul>
-			<ul id="...list">
+			<ul id="college-list">
 			</ul>
 			<script src="js/main.js"></script>
 		</body>
